---------------------------------------------------------------------------------------------------
Version: 2.0.7
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.0.6
Date: 2025-04-26
  Bugfixes:
    - Fix the data_api ignore feature straight up not doing anything
---------------------------------------------------------------------------------------------------
Version: 2.0.5
Date: 2025-04-26
  Minor Features:
    - Add data_api.lua for other mods to control which inserters should be adjustable
  Bugfixes:
    - Potentially fix error when adjusting inserter being built by space platforms, or due to other mods interfering
    - Fix 16 way inserters not being ignored while 8 way inserters were ignored
---------------------------------------------------------------------------------------------------
Version: 2.0.4
Date: 2024-12-22
  Changes:
    - Make the adjust key bind consuming to enable using left click with a modifier without also building entities
---------------------------------------------------------------------------------------------------
Version: 2.0.3
Date: 2024-11-19
  Features:
    - Add zh-CN (Chinese - China) locale thanks to plexpt - https://mods.factorio.com/mod/quick-adjustable-inserters/discussion/673c5dffd2e7eab6fda8e467
  Bugfixes:
    - Fix locale referencing the pipette key bind showing "Unknown control sequence"
---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2024-11-09
  Bugfixes:
    - Fix migration from 1.1 to 2.0 erroring
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2024-10-27
  Minor Features:
    - Add get_cursor_direction_sixteen_way to the qai remote interface
  Bugfixes:
    - Fix error when interacting with new half diagonal rail signals